--- a/style.css
+++ b/style.css
@@ -1,4 +1,240 @@
 
-<p>First paragraph</p>
-<p>Second paragraph</p>
-</li>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+  background-color: #ffffff ;
+  font-family: 'Nunito', sans-serif;
+  
+}
+a{
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+/* Nav bar */
+
+nav img{
+  width: 200px;
+}
+nav a:hover{
+  color: #56bbc6 ;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    font-size: 1.2rem;
+    background-color: white;
+    box-shadow: 0px 0px 25px #888888;
+    position:relative;
+}
+
+.nav-items{
+    list-style: none;
+    gap: 2rem;
+    display: flex;
+}
+.hamburger{
+    display: none;
+
+}
+/* signup section */
+.signup{
+  display: flex;
+}
+/* lamdatest info */
+.lamdatest-info{
+  flex: 1;
+  padding: 5rem;
+  background-color:#eef5fe ;
+}
+.lamdatest-info h3{
+  font-size: 1.8rem;
+  margin-bottom:3rem ;
+}
+.offer{
+  display: flex;
+  gap: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 3rem;
+}
+.lamdatest-info p{
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+.offer p{
+  font-size: 1.2rem;
+}
+.companies img{
+  width: 150px;
+}
+/* Form Section */
+.form{
+  flex: 1;
+  background-color: rgb(255, 255, 255);
+  padding: 3rem;
+  max-width: 100vw;
+}
+img{
+  width: 20px;
+}
+h2{
+  margin-bottom:0.5rem ;
+  font-size: 3rem;
+  color: rgb(36, 54, 96);
+ font-weight: bold;
+ text-align: center;
+}
+.platforms{
+  display: flex;
+  gap: 2rem;
+  margin: 2rem;
+  justify-content: center;
+}
+.platforms a{
+  display: flex;
+  font-size: 1rem;
+  gap: 5px;
+}
+.rainbow-button{
+  background: none; 
+  color: rgb(36, 54, 96);
+  border: 2px solid transparent;
+  border-image: linear-gradient(90deg, #0000FF, #800080);
+  border-image-slice: 1; 
+  border-image-width: 2px;
+  border-image-outset: 0; 
+  border-radius: 0px;
+  padding: 10px 20px; 
+  cursor: pointer;
+}
+.rainbow-button:hover{
+    background: linear-gradient(90deg, #e2e2f1, #f1d3f1); 
+}
+.alt-text{
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem 0;
+}
+.alt-text div{
+  background-color: rgba(198, 198, 198, 0.383);
+  height: 2px;
+  display:inline-table;
+  width: 35%;
+}
+.alt-text p{
+  text-wrap: nowrap;
+}
+.field{
+  margin-bottom: 1.5rem;
+  position: relative;
+}
+label{
+  font-size: 1rem;
+  color: rgb(36, 54, 96);
+}
+input{
+  display: block;
+  padding:1rem;
+  width: 100%;
+  font-family: 'Nunito', sans-serif;
+  box-sizing: border-box;
+  font-size: 1rem;
+  border: 1px solid rgb(188, 188, 188);
+  border-radius: 5px;
+}
+button{
+  margin-bottom:2rem ;
+  font-family: 'Nunito', sans-serif;
+  width: 100%;
+  background: linear-gradient(90deg, #3532ec, #800080); 
+  color: white;
+  border: none; 
+  border-radius: 5px;
+  padding: 15px 20px; 
+  cursor: pointer;
+}
+button:hover{
+  background: linear-gradient(90deg, #1e1cbf, #5b0b5b); 
+}
+span{
+  position: absolute;
+  right: 0;
+
+}
+input:focus{
+  border: none;
+}
+input:hover{
+  background-color: rgb(232, 236, 239);
+}
+
+.sign-in{
+  color: blue;
+}
+.signin-text{
+  margin-top: 4rem;
+  text-align: center;
+}
+form p a{
+  color: blue;
+}
+
+
+@media screen and (max-width:1294px) {
+  .signup{
+    display: flex;
+    flex-direction: column;
+    flex-flow: column-reverse;
+  }
+}
+
+@media screen and (max-width:952px) {
+    .hamburger{
+        display: block;
+        width: 30px;
+    
+    }
+    .nav-items{
+        display: none;
+    }
+   
+}
+@media screen and (max-width:502px) {
+  .form h2{
+    font-size: 2rem;
+  }
+  .platforms{
+    flex-direction: column;
+  }
+  .alt-text div{
+    width: 20%;
+  }
+  .lamdatest-info{
+    flex: 1;
+    padding: 2rem 1rem;
+  }
+  .lamdatest-info h3{
+    font-size: 1.5rem;
+  }
+  .offer{
+    gap: 1rem;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+  }
+  .lamdatest-info p{
+    font-size: 1rem;
+    margin-bottom: 2rem;
+  }
+
+  .companies img{
+    width: 100px;
+  }
+}
